--- a/droidbol.css
+++ b/droidbol.css
@@ -1,197 +1,3 @@
-/*Deleted: unnecessary elements*/
-.singleton-element:not(.cookie-choices-info),
-.item-control.blog-admin,
-.widget-item-control{display: none;}
-
-/*Fix: Blogger lightbox*/
-.CSS_LIGHTBOX{z-index: 90001 !important;}
-
-/*Fix: Comment Editor*/
-#comment-editor{border: 0;width: 100%;min-height: 220px;}
-
-/*Fix: fb responsive hack ?= google plus hack */
-.fb-comments,.fb-comments iframe span[style],
-.fb-comments iframe[style],.fb-comments span,
-.fb-like-box,.fb-like-box iframe span[style],
-.fb-like-box iframe[style],.fb-like-box span,
-.cmt_iframe_holder, .cmt_iframe_holder > iframe {width:100%!important}
-
-/*Design: is Layout Mode*/
-body#layout .left{float: left;width: 40%;}
-body#layout .right{float: left;width: 60%;}
-
-/* Variable definitions
-   ====================
-   <Group description="Colores" selector="color">
-      <Variable name="maincolor" description="Color principal" type="color" default="#263238" value="#263238"/>
-      <Variable name="bgcolor" description="Color de fondo" type="color" default="#1F253D" value="#13191c"/>
-      <Variable name="textcolor" description="Color de fuentes" type="color" default="#3F51B5" value="#ffda19"/>
-   </Group>
- <Group description="Slider Populares" selector=".top-entry">
-      <Variable name="fondo.popular" description="Fondo del titulo" type="color" default="#41555f" value="#770808"/>
-      <Variable name="color.popular" description="Color del titulo" type="color" default="#ffffff" value="#f3f2ef"/>
-      <Variable name="fondo.popular.arrow" description="Color de las flechas" type="color" default="rgba(255, 255, 255, .5)" value="#920000"/>
-      <Variable name="color.popular.arrow" description="Fondo de las flechas" type="color" default="rgba(0, 0, 0, .75)" value="#ffe558"/>
-   </Group>
-   <Group description="Fuentes" selector="body">
-      <Variable name="mainfont" description="fuente del texto" type="font" family="RobotoDraft" default="RobotoDraft" value="RobotoDraft"/>
-   </Group>
-<Group description="Layout (Refrescar)" selector=".main">
-      <Variable name="layout.postnum" description="Numero de entradas" type="string" default="10" value="10"/>
-    </Group>
-
-
-  <Group description="Paginacion" selector=".blog-pager__link">
-      <Variable name="page.color" description="Color del texto" type="color" default="rgba(255, 0, 255, .75)" value="#f3f2ef"/>
-      <Variable name="page.fondo.color" description="Color del borde" type="color" default="#f3f3f0" value="#171E22"/>
-   </Group>
-
-<Group description="Basico" selector="body">
-      <Variable name="body.background.true" description="Color de fondo" type="color" default="#f3f2ef" value="#f3f2ef"/>
-      <Variable name="main.color" description="Color principal" type="color" default="#336e7b" value="#a4ca39"/>
-      <Variable name="link.color" description="Color de enlaces" type="color" default="#336e7b" value="#72ff58"/>
-      <Variable name="logo.font" description="Fuente del logo" type="font" family="Custom" default="Custom" value="Custom"/>
-      <Variable name="main.font" description="Fuente del texto" type="font" family="RobotoDraft" default="RobotoDraft" value="RobotoDraft"/>
-   </Group>
-
-*/
-/*
-=> Slider post populares (Colores avansados)
-*/
-.entrys li > a > span,.wjs-rel__title {
-    background-color: $(fondo.popular); /* <= fondo populares*/
-    color: $(color.popular); /* <= color populares*/
-}
-.next, .prev {
-    background: $(fondo.popular.arrow); /* <= fondo flechas populares*/
-    color: $(color.popular.arrow); /* <=  color flechas populares*/
-}
-/* Fondo y Header
-   ========================================================================== */
-/**
- * 1. Elige entre "repeat" y "no-repeat" para no repetir el fondo
- * 2. Imagen del header 
- */
-
-body {
-	background-repeat: repeat; /* 1 */
-    background-position: top center;
-}
-
-.header__head {
-background-image: url(https://www.retro-synthwave.com/wp-content/uploads/2016/10/NeonDrive_Wallpaper_01-1.jpg); /* 2 */
-	background-position: center center;
-
-}
-
-/* Fuentes del texto
-   ========================================================================== */
-/**
- * 1. Fuente del texto global
- */
-
-body {
-	font-family: '$(mainfont.family)', sans-serif; /* 1 */
-}
-
-/*Color principal*/
-.color,
-.search__button--control,
-.card__image::before,
-.widget input[type=submit], 
-.widget input[type=button] {background-color: $(main.color);}
-.nav__item.is-active,
-.nav__toggle.is-active,
-.blog-pager__link.is-here {
-    box-shadow: 0 60px 0 0 $(main.color) inset;
-
-
-}
-/* Color principal y enlaces
-   ========================================================================== */
-/**
- * 1. Color de fondo
- * 2. Color principal
- * 3. Color de los enlaces
- */
-
-body {
-	background-color: $bgcolor; /* 1 */
-}
-
-.color,
-.md-aside__profile,
-.header__head, 
-.card .card__content.card__content--popular,
-.head__descripcion,
-.widget input[type=submit], .widget input[type=button] {
-	background-color: $maincolor; /* 2 */
-}
-
-.md-aside::-webkit-scrollbar-thumb {
-    background-color: $maincolor; /* 2 */
-}
-
-a,
-.blog__title i,
-.social__link,
-.md-aside__menu--link.is-active,
-.copyright__content a {
-	color: $textcolor; /* 3 */
-}
-/* Cover y avatar
-   ========================================================================== */
-/**
- * 1. Cover del widget Perfil
- * 2. Avatar de los comentarios anonimos
- */
-
-.Profile .widget-content::before,
-.md-aside__profile { /* 1 */ 
-    background-image: url(https://4.bp.blogspot.com/-chmkmufiw7M/WdenC3nKuYI/AAAAAAAACqw/ro6Mp2ZvNDw0FR1RAHzWgvDzkf4y7F1wwCPcBGAYYCw/s1600/PORTADA%2BYOUTUBE%2B2.png);
-}
-
-.avatar-image-container { /* 2 */
-    background-image: url(https://3.bp.blogspot.com/-AK9ctxSv1FM/WbilN_f2DBI/AAAAAAAAC4g/RJE0i7qenCcp6lTNGJdJA7ufzM_4wNtMgCLcBGAs/s1600/anon.png);
-}
-/* Estilos alternativos
-   ========================================================================== */
-
-/**
- * 1. Skin oscuro (Dark)
- */
-
-.dark body,.dark .share-list{background-color:#15191b}
-.dark .md-aside__menu--link:hover,.dark .info,.dark .deleted-comment,.dark article code,.dark article pre,.dark .tagslist__link,.dark .share-list__link:hover{background:rgba(0,0,0,.4)}
-.dark .data__title,.dark .md-aside .widget:not(.Profile),.dark .comentarios > h4, .dark .comment-thread li,.dark .article__head,.dark .data__meta,.dark article blockquote{border-color:rgba(0,0,0,.4)}
-.dark .comentarios,.dark .article,.dark .card__content,.dark .footer__copyright,.dark .md-aside,.dark .widget-content,.dark .user-content,.dark .contact-form-widget,.dark .wikipedia-search-main-container,.dark .post-summary,.dark .error__message{background:#263238}
-.dark .md-aside__menu--link:active,.dark .md-aside__menu--link:focus,.dark .md-aside__menu--link:hover,.dark .copyright__content,.dark .blog__title,.dark .data__title,.dark .widget>h2,.dark .info,.dark .comentarios > h4,.dark .comment-header .user,.dark .comment-header .user a,.dark article h1,.dark article h2,.dark  article h3,.dark article h4,.dark article h5,.dark article h6,.dark .tagslist__link,.dark .share-list__link,.dark .error__title,.dark .error__figure{color:#fff}
-.dark .md-aside__menu--link,.dark .comment-content,.dark .data__time,.dark .comment-header .datetime > a,.dark article code,.dark article pre,.dark article .post-body,.dark .article__time,.dark article blockquote,.dark .mott,.dark .error__info{color:rgba(255,255,255,.75)}
-
-/**
- * 2. Skin incluso (Even)
- */
-
-.even body,.even .share-list{background-color:#9e9b84}
-.even .md-aside__menu--link:hover,.even .info,.even .deleted-comment,.even article code,.even article pre,.even .tagslist__link,.even .share-list__link:hover{background:rgba(0,0,0,.2)}
-.even .data__title,.even .md-aside .widget:not(.Profile),.even .comentarios > h4, .even .comment-thread li,.even .article__head,.even .data__meta,.even article blockquote{border-color:rgba(0,0,0,.2)}
-.even .share-list__link:hover {color: rgba(0, 0, 0, 0.75);}
-.even .comentarios,.even .article,.even .card__content,.even .footer__copyright,.even .md-aside,.even .widget-content,.even .user-content,.even .contact-form-widget,.even .wikipedia-search-main-container,.even .post-summary,.even .error__message{background:#e7e8db}
-
-/**
- * 3. Skin embarcacion (Navi)
- */
-
-.navi body,.navi .share-list{background-color:#79939c}
-.navi .md-aside__menu--link:hover,.navi .info,.navi .deleted-comment,.navi article code,.navi article pre,.navi .tagslist__link,.navi .share-list__link:hover{background:rgba(0,0,0,.2)}
-.navi .data__title,.navi .md-aside .widget:not(.Profile),.navi .comentarios > h4, .navi .comment-thread li,.navi .article__head,.navi .data__meta,.navi article blockquote{border-color:rgba(0,0,0,.2)}
-.navi .share-list__link:hover {color: rgba(0, 0, 0, 0.75);}
-.navi .comentarios,.navi .article,.navi .card__content,.navi .footer__copyright,.navi .md-aside,.navi .widget-content,.navi .user-content,.navi .contact-form-widget,.navi .wikipedia-search-main-container,.navi .post-summary,.navi .error__message{background:#d5f0f7}
-
-
-
-/*Custom css ==>*/
-
 /* --- BUSCARDOR-SEARCH*/
 #search-box {position: relative;width: 75%;margin: 0;color: black !important;}#search-form {height: 34px;border: 1px solid #000000;border-radius: 5px;background-color: #ffffff;overflow: hidden;}#search-text {font-size: 12px;color: black;width: 100%;height:100%;text-align: left;border-width: 0;background: transparent;}#search-box input[type="text"] {width: 90%;padding: 11px 0 12px 1em;outline: none;}#search-button {position: absolute;top: 0;right: 0;height: 36px;width: 80px;font-family: Verdana, Geneva, sans-serif;font-size: 14px;color: #ffffff;text-align: center;line-height: 35px;border-width: 0;background-color: #000000;border-radius: 0px 5px 5px 0px;cursor: pointer;}
 /*
@@ -545,7 +351,16 @@ a.btn-google{color:#fff}
     text-align: center;
 }
 
+.widget-new-APPS {
+    background-color: #E74C3C;
+}
 
+.widget-new-JUEGOS {
+    background-color: #2980B9;
+}
+.widget-new-NOTICIAS {
+    background-color: #A4CA39;
+}
 
 .m-readMore{
 
